samples/_failures_safe/1761497387_3c5f3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45abc2bc.c: In function ‘tokenize’:
./samples/SAFE/__tmp_45abc2bc.c:164:5: error: expected expression at end of input
  164 |     add_token(lexer, TOKEN_EOF,
      |     ^~~~~~~~~
./samples/SAFE/__tmp_45abc2bc.c:164:5: error: expected declaration or statement at end of input
